# treasuretrouble

./: .gitignore  README.md  pyproject.toml  settings.toml  tt_app.toml  tt_db.toml  tt_log.toml  tt_server.toml
doc/: setup-postgresql.md  stack.md
src/treasuretrouble/: __init__.py  app.py  config.py  logging.py
src/treasuretrouble/config/: __init__.py
src/treasuretrouble/configs/: alchemy.py  constants.py  openapi.py  structlog.py
src/treasuretrouble/database/: models.py
src/treasuretrouble/database/models/: users.py
src/treasuretrouble/database/users/: controller.py  repo.py
src/treasuretrouble/domain/users/: dependencies.py  schemas.py  services.py  urls.py
src/treasuretrouble/domain/users/controllers/: users.py
src/treasuretrouble/lib/: dependencies.py  schema.py  util.py
src/treasuretrouble/server/: builder.py  plugins.py  routers.py
src/treasuretrouble/settings/: __init__.py  base.py
src/treasuretrouble/settings/subsettings/: app.py  db.py  log.py  server.py
tests/: conftest.py  test_config.py  test_user.py
