[tool.poetry]
name = "treasuretrouble"
version = "0.0.3"
description = ""
authors = ["Daniel Müller <acct.d-mueller@mailbox.org>"]
readme = "README.md"
packages = [{ include = "treasuretrouble", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.4"
litestar = "^2.9.0"
python-telegram-bot = "^21.3"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.10.0"
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
style = "semver"
vcs = "git"

[tool.poetry-dynamic-versioning.substitution]
folders = [{ path = "src" }]

[tool.mypy]
python_version = "3.12"
strict = true
