[tool.poetry]
name = "treasuretrouble"
version = "0.0.4"
description = ""
authors = ["Daniel Müller <acct.d-mueller@mailbox.org>"]
readme = "README.md"
packages = [{ include = "treasuretrouble", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.4"
litestar = "^2.9.0"
python-telegram-bot = "^21.3"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.10.0"
ruff = "^0.4.9"
bump-my-version = "^0.23.0"


[tool.bumpversion]
current_version = "0.0.5"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "src/treasuretrouble/__init__.py"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
strict = true
